--- a/templates/rocchioresults.html
+++ b/templates/rocchioresults.html
@@ -51,6 +51,5 @@ background-color:#00CCFF;
 </table>
 
 <center>
-
-    <form action="{{url_for('rocchioresults')}}" method="post"><input type="submit" name="submit" value="Refine Query?"></form>
+    <form action="{{url_for('index')}}"><input type="submit" name="submit" value="Back to Search"></form>
 </center>
