--- a/templates/results.html
+++ b/templates/results.html
@@ -51,6 +51,8 @@ background-color:#00CCFF;
 </table>
 
 <center>
-
-    <form action="{{url_for('rocchioresults')}}" method="post"><input type="submit" name="submit" value="Refine Query?"></form>
+    <br>
+    <form action="{{url_for('rocchioresults')}}" method="post"><input type="submit" name="submit" value="Refine Results?"></form>
+    <br>
+    <form action="{{url_for('index')}}"><input type="submit" name="submit" value="Back to Search"></form>
 </center>
